// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataRequestTableRow renders correctly 1`] = `
<table>
  <tbody>
    <DataRequestTableRow
      dataRequestObservation={
        Object {
          "dataFiles": Array [
            Object {
              "id": "file-1",
              "name": "File 1",
              "observation": Object {
                "id": "obs-1",
                "name": "Observation 1",
              },
            },
            Object {
              "id": "file-2",
              "name": "File 2",
              "observation": Object {
                "id": "obs-2",
                "name": "Observation 2",
              },
            },
          ],
          "id": "part-1",
          "name": "obz-1",
          "status": "SUCCESSFUL",
        }
      }
    >
      <tr>
        <td>
          obz-1
        </td>
        <td>
          <ul>
            <li
              key="file-1"
            >
              File 1
            </li>
            <li
              key="file-2"
            >
              File 2
            </li>
          </ul>
        </td>
      </tr>
    </DataRequestTableRow>
  </tbody>
</table>
`;

exports[`DataRequestTableRow renders correctly 2`] = `
<table>
  <tbody>
    <DataRequestTableRow
      dataRequestObservation={
        Object {
          "dataFiles": Array [
            Object {
              "id": "file-1",
              "name": "File 1",
              "observation": Object {
                "id": "obs-1",
                "name": "Observation 1",
              },
            },
            Object {
              "id": "file-2",
              "name": "File 2",
              "observation": Object {
                "id": "obs-2",
                "name": "Observation 2",
              },
            },
          ],
          "id": "part-1",
          "name": "obz-1",
          "status": "PENDING",
        }
      }
    >
      <tr>
        <td>
          obz-1
        </td>
        <td>
          <ul>
            <li
              key="file-1"
            >
              File 1
            </li>
            <li
              key="file-2"
            >
              File 2
            </li>
          </ul>
        </td>
      </tr>
    </DataRequestTableRow>
  </tbody>
</table>
`;

exports[`DataRequestTableRow renders correctly 3`] = `
<table>
  <tbody>
    <DataRequestTableRow
      dataRequestObservation={
        Object {
          "dataFiles": Array [
            Object {
              "id": "file-1",
              "name": "File 1",
              "observation": Object {
                "id": "obs-1",
                "name": "Observation 1",
              },
            },
            Object {
              "id": "file-2",
              "name": "File 2",
              "observation": Object {
                "id": "obs-2",
                "name": "Observation 2",
              },
            },
          ],
          "id": "part-1",
          "name": "obz-1",
          "status": "FAILED",
        }
      }
    >
      <tr>
        <td>
          obz-1
        </td>
        <td>
          <ul>
            <li
              key="file-1"
            >
              File 1
            </li>
            <li
              key="file-2"
            >
              File 2
            </li>
          </ul>
        </td>
      </tr>
    </DataRequestTableRow>
  </tbody>
</table>
`;

exports[`DataRequestTableRow renders correctly 4`] = `
<table>
  <tbody>
    <DataRequestTableRow
      dataRequestObservation={
        Object {
          "dataFiles": Array [
            Object {
              "id": "file-1",
              "name": "File 1",
              "observation": Object {
                "id": "obs-1",
                "name": "Observation 1",
              },
            },
            Object {
              "id": "file-2",
              "name": "File 2",
              "observation": Object {
                "id": "obs-2",
                "name": "Observation 2",
              },
            },
          ],
          "id": "part-1",
          "name": "obz-1",
          "status": "EXPIRED",
        }
      }
    >
      <tr>
        <td>
          obz-1
        </td>
        <td>
          <ul>
            <li
              key="file-1"
            >
              File 1
            </li>
            <li
              key="file-2"
            >
              File 2
            </li>
          </ul>
        </td>
      </tr>
    </DataRequestTableRow>
  </tbody>
</table>
`;
